[gd_scene load_steps=4 format=2]

[ext_resource path="res://slingshot.png" type="Texture" id=1]
[ext_resource path="res://Slingshot.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 201.002

[node name="Slingshot" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -290 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="LeftLine" type="Line2D" parent="."]
points = PoolVector2Array( 66, -469, -294, -397 )

[node name="RightLine" type="Line2D" parent="."]
points = PoolVector2Array( -62, -475, -289, -399 )

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2( 10, -468 )
shape = SubResource( 1 )

[node name="CenterOfSlingShot" type="Position2D" parent="."]
position = Vector2( 3, -432 )

[connection signal="input_event" from="TouchArea" to="." method="_on_TouchArea_input_event"]
